# gnutc_gdb_make_cmake

01 Hello World/: hello  hello.c
02 factorial/: a.out  factorial.cpp
03 sample make/: Makefile  main.cpp  message.cpp  message.hpp
04 cmake intro/hello/: CMakeLists.txt  main.cpp
05 cmake include_directories/test/: CMakeLists.txt
05 cmake include_directories/test/src/: main.cpp
06 cmake add_libary/: CMakeLists.txt
06 cmake add_libary/lib/: CMakeLists.txt
07 variable/: CMakeLists.txt
07 variable/src/: main.cpp
08 config_file/: CMakeLists.txt  defaultconfig.h.in
08 config_file/src/: main.cpp
09 if-foreach-while/: CMakeLists.txt  defaultconfig.h.in
09 if-foreach-while/src/: main.cpp
10 function-cache/: CMakeLists.txt
11 compile-install/: CMakeLists.txt
11 compile-install/src/: main.cpp
12 file-string-excute_process/: CMakeLists.txt
